--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
+    "socket.io": "^4.4.0",
     "ws": "^8.3.0"
   },
   "devDependencies": {
